--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
-    "start": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsup src",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +29,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "prisma": "^5.13.0",
     "ts-node": "^10.9.1",
+    "tsup": "^8.0.2",
     "typescript": "^5.2.2"
   }
 }
